s/f checks on setting values

--- a/Database/SpaceUnionDatabaseAccess/SpaceUnionDatabaseAccess/App.config
+++ b/Database/SpaceUnionDatabaseAccess/SpaceUnionDatabaseAccess/App.config
@@ -14,4 +14,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="SpaceUnionEntities" connectionString="metadata=res://*/SpaceUnionDb.csdl|res://*/SpaceUnionDb.ssdl|res://*/SpaceUnionDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=142.232.17.225\SQLEXPRESS;initial catalog=SpaceUnion;user id=student;password=Study1327;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="SpaceUnionDatabaseAccess.Properties.Settings.SpaceUnionConnectionString"
+      connectionString="Data Source=142.232.17.225\SQLEXPRESS;Initial Catalog=SpaceUnion;User ID=student;Password=Study1327"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
