added start of ship table access, added work to admin form (space ship add/edit functionality

--- a/Database/SpaceUnionDatabase/SpaceUnionDatabase/SpaceUnionDatabase.csproj
+++ b/Database/SpaceUnionDatabase/SpaceUnionDatabase/SpaceUnionDatabase.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ShipTableAccess.cs" />
     <Compile Include="SpaceUnionModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
