--- a/Server/Server Application/Data Structures/Data Structures.csproj
+++ b/Server/Server Application/Data Structures/Data Structures.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistrationData.cs" />
+    <Compile Include="RoomList.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
