--- a/Menus/SpaceMenus/SpaceMenus/SpaceMenus.csproj
+++ b/Menus/SpaceMenus/SpaceMenus/SpaceMenus.csproj
@@ -83,9 +83,13 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateLobbyMenu.cs" />
+    <Compile Include="CreditsMenu.cs" />
     <Compile Include="GuiHelper.cs" />
     <Compile Include="LoginMenu.cs" />
     <Compile Include="MainMenu.cs" />
+    <Compile Include="MultiplayerMenu.cs" />
+    <Compile Include="OptionsMenu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
