--- a/Menus/SpaceMenus/SpaceMenus/SpaceMenus.csproj
+++ b/Menus/SpaceMenus/SpaceMenus/SpaceMenus.csproj
@@ -83,15 +83,15 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CreateLobbyMenu.cs" />
-    <Compile Include="CreditsMenu.cs" />
+    <Compile Include="Controllers\CreateLobbyMenu.cs" />
+    <Compile Include="Controllers\CreditsMenu.cs" />
     <Compile Include="GuiHelper.cs" />
-    <Compile Include="LobbyBrowserMenu.cs" />
-    <Compile Include="LobbyMenu.cs" />
-    <Compile Include="LoginMenu.cs" />
-    <Compile Include="MainMenu.cs" />
-    <Compile Include="MultiplayerMenu.cs" />
-    <Compile Include="OptionsMenu.cs" />
+    <Compile Include="Controllers\LobbyBrowserMenu.cs" />
+    <Compile Include="Controllers\LobbyMenu.cs" />
+    <Compile Include="Controllers\LoginMenu.cs" />
+    <Compile Include="Controllers\MainMenu.cs" />
+    <Compile Include="Controllers\MultiplayerMenu.cs" />
+    <Compile Include="Controllers\OptionsMenu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
