Added the ability for the form to allow for a new ship to be added to the datbase. (still need to add the actual call to the database if ship is valid)

--- a/Database/AdminControlForm/AdminControlForm/AdminControlForm.csproj
+++ b/Database/AdminControlForm/AdminControlForm/AdminControlForm.csproj
@@ -59,6 +59,7 @@
       <DependentUpon>AcceptCancelBlockActionForm.cs</DependentUpon>
     </Compile>
     <Compile Include="BlockUnblockUserValidation.cs" />
+    <Compile Include="ShipValidation.cs" />
     <Compile Include="UserValidation.cs" />
     <Compile Include="AdminForm.cs">
       <SubType>Form</SubType>
