--- a/Database/AdminControlForm/AdminControlForm/App.config
+++ b/Database/AdminControlForm/AdminControlForm/App.config
@@ -8,7 +8,11 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <connectionStrings>
-    <add name="SpaceUnionEntities" connectionString="metadata=res://*/SpaceUnionModel.csdl|res://*/SpaceUnionModel.ssdl|res://*/SpaceUnionModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=142.232.17.225\SQLEXPRESS;initial catalog=SpaceUnion;user id=student;password=Study1327;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+      <add name="SpaceUnionEntities" connectionString="metadata=res://*/SpaceUnionModel.csdl|res://*/SpaceUnionModel.ssdl|res://*/SpaceUnionModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=142.232.17.225\SQLEXPRESS;initial catalog=SpaceUnion;user id=student;password=Study1327;multipleactiveresultsets=True;application name=EntityFramework&quot;"
+          providerName="System.Data.EntityClient" />
+      <add name="AdminControlForm.Properties.Settings.SpaceUnionConnectionString"
+          connectionString="Data Source=142.232.17.225\SQLEXPRESS;Initial Catalog=SpaceUnion;User ID=student;Password=Study1327"
+          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
