--- a/Server/Server Application/Data Structures/Data Structures.csproj
+++ b/Server/Server Application/Data Structures/Data Structures.csproj
@@ -43,12 +43,14 @@
     <Compile Include="Data.cs" />
     <Compile Include="ErrorMessage.cs" />
     <Compile Include="GameData.cs" />
+    <Compile Include="GameFrame.cs" />
     <Compile Include="GameMessage.cs" />
     <Compile Include="Gameroom.cs" />
     <Compile Include="GameSetupMessage.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegistrationData.cs" />
+    <Compile Include="Registration.cs" />
+    <Compile Include="RoomInfo.cs" />
     <Compile Include="RoomList.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
