--- a/Server/Server Application/Data Manipulation/Data Manipulation.csproj
+++ b/Server/Server Application/Data Manipulation/Data Manipulation.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Constants.cs" />
     <Compile Include="DataControl.cs" />
+    <Compile Include="PasswordHash.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TransmissionSerializationBinder.cs" />
   </ItemGroup>
