--- a/Database/SpaceUnionDatabase/SpaceUnionDatabase/SpaceUnionDatabase.csproj
+++ b/Database/SpaceUnionDatabase/SpaceUnionDatabase/SpaceUnionDatabase.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ship.cs">
+      <DependentUpon>SpaceUnionModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="ShipTableAccess.cs" />
     <Compile Include="SpaceUnionModel.Context.cs">
       <AutoGen>True</AutoGen>
