added validation for password in the admin form requiring the password only cosist of letters and digits

--- a/Database/SpaceUnionDatabase/SpaceUnionDatabase/SpaceUnionDatabase.csproj
+++ b/Database/SpaceUnionDatabase/SpaceUnionDatabase/SpaceUnionDatabase.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PasswordHash.cs" />
     <Compile Include="Ship.cs">
       <DependentUpon>SpaceUnionModel.tt</DependentUpon>
     </Compile>
