fixed issues reading from the dataset after deleting and creating a new user table in the database

--- a/Database/AdminControlForm/AdminControlForm/AdminForm.csproj
+++ b/Database/AdminControlForm/AdminControlForm/AdminForm.csproj
@@ -60,6 +60,10 @@
     </Compile>
     <Compile Include="BlockUnblockUserValidation.cs" />
     <Compile Include="ShipValidation.cs" />
+    <Compile Include="SpaceUnionDataSet.cs">
+      <DependentUpon>SpaceUnionDataSet.xsd</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="SpaceUnionDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
