--- a/Database/SpaceUnionDatabase/SpaceUnionDatabase/SpaceUnionDatabase.csproj
+++ b/Database/SpaceUnionDatabase/SpaceUnionDatabase/SpaceUnionDatabase.csproj
@@ -47,6 +47,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PasswordHash.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="Ship.cs">
       <DependentUpon>SpaceUnionModel.tt</DependentUpon>
     </Compile>
@@ -80,14 +85,18 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.Config">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
     <EntityDeploy Include="SpaceUnionModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>SpaceUnionModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.Config" />
-    <None Include="packages.config" />
     <None Include="SpaceUnionModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>SpaceUnionModel.edmx</DependentUpon>
