--- a/Menus/SpaceMenus/SpaceMenus/SpaceMenus.csproj
+++ b/Menus/SpaceMenus/SpaceMenus/SpaceMenus.csproj
@@ -65,6 +65,9 @@
     <Reference Include="Microsoft.Xna.Framework.Graphics, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="Microsoft.Xna.Framework.GamerServices, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="mscorlib" />
+    <Reference Include="Nuclex.Game">
+      <HintPath>..\..\..\..\..\SpaceMenus\References\framework\xna-4.0-x86\Nuclex.Game.dll</HintPath>
+    </Reference>
     <Reference Include="Nuclex.Input, Version=4.0.0.0, Culture=neutral, PublicKeyToken=96bb577564343f16, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\References\framework\xna-4.0-x86\Nuclex.Input.dll</HintPath>
@@ -92,6 +95,7 @@
     <Compile Include="Controllers\MainMenu.cs" />
     <Compile Include="Controllers\MultiplayerMenu.cs" />
     <Compile Include="Controllers\OptionsMenu.cs" />
+    <Compile Include="PasswordInputControl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
@@ -103,6 +107,14 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Server\Server Application\Client Comm Module\Client Comm Module.csproj">
+      <Project>{b0d9e654-2f4c-4891-9dac-86af01c74ee8}</Project>
+      <Name>Client Comm Module</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\Server\Server Application\Data Structures\Data Structures.csproj">
+      <Project>{b5c87f97-793c-436f-be66-bda78f9a7046}</Project>
+      <Name>Data Structures</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SpaceMenusContent\SpaceMenusContent.contentproj">
       <Name>SpaceMenusContent</Name>
       <XnaReferenceType>Content</XnaReferenceType>
