--- a/Menus/SpaceMenus/SpaceMenus/SpaceMenus.csproj
+++ b/Menus/SpaceMenus/SpaceMenus/SpaceMenus.csproj
@@ -77,6 +77,7 @@
       <HintPath>..\..\References\nunit\net-4.0\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
