--- a/Database/AdminControlForm/AdminControlForm/AdminForm.csproj
+++ b/Database/AdminControlForm/AdminControlForm/AdminForm.csproj
@@ -79,6 +79,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AdminForm.resx">
       <DependentUpon>AdminForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
