fix all the issues

--- a/Database/AdminControlForm/packages/repositories.config
+++ b/Database/AdminControlForm/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\SpaceUnionDatabase\SpaceUnionDatabase\packages.config" />
   <repository path="..\AdminControlForm\packages.config" />
 </repositories>
