--- a/Database/SpaceUnionDatabase/SpaceUnionDatabase/App.Config
+++ b/Database/SpaceUnionDatabase/SpaceUnionDatabase/App.Config
@@ -4,8 +4,6 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-  <add name="SpaceUnionEntities" connectionString="metadata=res://*/SpaceUnionModel.csdl|res://*/SpaceUnionModel.ssdl|res://*/SpaceUnionModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=142.232.17.225\SQLEXPRESS;initial catalog=SpaceUnion;user id=student;password=Study1327;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -13,4 +11,5 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+<connectionStrings><add name="SpaceUnionEntities" connectionString="metadata=res://*/SpaceUnionModel.csdl|res://*/SpaceUnionModel.ssdl|res://*/SpaceUnionModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=142.232.17.225\SQLEXPRESS;initial catalog=SpaceUnion;user id=student;password=Study1327;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
