--- a/Database/AdminControlForm/AdminControlForm/AdminForm.csproj
+++ b/Database/AdminControlForm/AdminControlForm/AdminForm.csproj
@@ -60,20 +60,16 @@
     </Compile>
     <Compile Include="BlockUnblockUserValidation.cs" />
     <Compile Include="ShipValidation.cs" />
-    <Compile Include="SpaceUnionDataSet.cs">
-      <DependentUpon>SpaceUnionDataSet.xsd</DependentUpon>
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="SpaceUnionDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>SpaceUnionDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="UserValidation.cs" />
-    <Compile Include="AdminForm.cs">
+    <Compile Include="Resources\AdminForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AdminForm.Designer.cs">
+    <Compile Include="Resources\AdminForm.Designer.cs">
       <DependentUpon>AdminForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
@@ -81,7 +77,7 @@
     <EmbeddedResource Include="AcceptCancelBlockActionForm.resx">
       <DependentUpon>AcceptCancelBlockActionForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AdminForm.resx">
+    <EmbeddedResource Include="Resources\AdminForm.resx">
       <DependentUpon>AdminForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
