--- a/Database/AdminControlForm/AdminControlForm/AdminForm.csproj
+++ b/Database/AdminControlForm/AdminControlForm/AdminForm.csproj
@@ -58,6 +58,12 @@
     <Compile Include="AcceptCancelBlockActionForm.Designer.cs">
       <DependentUpon>AcceptCancelBlockActionForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="AdminForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminForm.Designer.cs">
+      <DependentUpon>AdminForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="AdminLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,23 +78,17 @@
       <DependentUpon>SpaceUnionDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="UserValidation.cs" />
-    <Compile Include="Resources\AdminForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Resources\AdminForm.Designer.cs">
-      <DependentUpon>AdminForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AcceptCancelBlockActionForm.resx">
       <DependentUpon>AcceptCancelBlockActionForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AdminLogin.resx">
-      <DependentUpon>AdminLogin.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Resources\AdminForm.resx">
+    <EmbeddedResource Include="AdminForm.resx">
       <DependentUpon>AdminForm.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdminLogin.resx">
+      <DependentUpon>AdminLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
