--- a/Client/SpaceUnionXNA.csproj
+++ b/Client/SpaceUnionXNA.csproj
@@ -87,7 +87,7 @@
     <Compile Include="Animations\Explosion.cs" />
     <Compile Include="Animations\ScrollingBackground.cs" />
     <Compile Include="Animations\ShortExplosion.cs" />
-    <Compile Include="Background.cs" />
+    <Compile Include="Animations\Background.cs" />
     <Compile Include="Controllers\CreateLobbyMenu.cs" />
     <Compile Include="Controllers\CreditsMenu.cs">
       <SubType>Code</SubType>
@@ -103,7 +103,7 @@
     <Compile Include="Controllers\OptionsMenu.cs" />
     <Compile Include="Controllers\ShipSelectionScreen.cs" />
     <Compile Include="Controllers\TeamBattle.cs" />
-    <Compile Include="GUI.cs" />
+    <Compile Include="Tools\GUI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
@@ -116,7 +116,7 @@
     <Compile Include="StellarObjects\Asteroid.cs" />
     <Compile Include="StellarObjects\LargeMassObject.cs" />
     <Compile Include="StellarObjects\Planet.cs" />
-    <Compile Include="Tangible.cs" />
+    <Compile Include="Tools\Tangible.cs" />
     <Compile Include="Tools\AnimationClass.cs" />
     <Compile Include="Tools\AssetManager.cs" />
     <Compile Include="Tools\BaseButton.cs" />
@@ -124,7 +124,6 @@
     <Compile Include="Tools\CollisionHandler.cs" />
     <Compile Include="Tools\CustomGUI.cs" />
     <Compile Include="Tools\ExplosionEngine.cs" />
-    <Compile Include="Tools\GeneralButton.cs" />
     <Compile Include="Tools\GuiHelper.cs" />
     <Compile Include="Tools\HitBox.cs" />
     <Compile Include="Tools\HitCircle.cs" />
