--- a/Server/Server Application/Data Structures/Data Structures.csproj
+++ b/Server/Server Application/Data Structures/Data Structures.csproj
@@ -54,6 +54,12 @@
     <Compile Include="RoomInfo.cs" />
     <Compile Include="RoomList.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Data Manipulation\Data Manipulation.csproj">
+      <Project>{93ea3317-84d9-4b61-9c03-020646b3eb05}</Project>
+      <Name>Data Manipulation</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
