--- a/Database/SpaceUnionDatabase/SpaceUnionDatabase/SpaceUnionDatabase.csproj
+++ b/Database/SpaceUnionDatabase/SpaceUnionDatabase/SpaceUnionDatabase.csproj
@@ -46,6 +46,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PasswordHash.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="Ship.cs">
+      <DependentUpon>SpaceUnionModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="ShipTableAccess.cs" />
     <Compile Include="SpaceUnionModel.Context.cs">
       <AutoGen>True</AutoGen>
@@ -71,18 +80,23 @@
     <Compile Include="UserStat.cs">
       <DependentUpon>SpaceUnionModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="UserStatTableAccess.cs" />
     <Compile Include="UserTableAccess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.Config">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
     <EntityDeploy Include="SpaceUnionModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>SpaceUnionModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.Config" />
-    <None Include="packages.config" />
     <None Include="SpaceUnionModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>SpaceUnionModel.edmx</DependentUpon>
@@ -99,9 +113,6 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
