--- a/Server/Server Application/Data Manipulation/Data Manipulation.csproj
+++ b/Server/Server Application/Data Manipulation/Data Manipulation.csproj
@@ -47,6 +47,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TransmissionSerializationBinder.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Data Structures\Data Structures.csproj">
+      <Project>{b5c87f97-793c-436f-be66-bda78f9a7046}</Project>
+      <Name>Data Structures</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
