--- a/Server/Server Application/Server Application/App.config
+++ b/Server/Server Application/Server Application/App.config
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
   </startup>
   <connectionStrings>
-    <add name="SpaceUnionEntities" connectionString="metadata=res://*/SpaceUnionModel.csdl|res://*/SpaceUnionModel.ssdl|res://*/SpaceUnionModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=142.232.17.225\SQLEXPRESS;initial catalog=SpaceUnion;user id=student;password=Study1327;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SpaceUnionEntities" connectionString="metadata=res://*/SpaceUnionModel.csdl|res://*/SpaceUnionModel.ssdl|res://*/SpaceUnionModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=142.232.17.225\SQLEXPRESS;initial catalog=SpaceUnion;user id=student;password=Study1327;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
 </configuration>
