--- a/Client/SpaceUnionXNA.csproj
+++ b/Client/SpaceUnionXNA.csproj
@@ -107,11 +107,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
-    <Compile Include="Ships\Bug.cs" />
-    <Compile Include="Ships\Scout.cs" />
+    <Compile Include="Ships\AlphaShip.cs" />
+    <Compile Include="Ships\OmegaShip.cs" />
     <Compile Include="Ships\Ship.cs" />
-    <Compile Include="Ships\TestShip.cs" />
-    <Compile Include="Ships\UFO.cs" />
+    <Compile Include="Ships\ThetaShip.cs" />
     <Compile Include="Ships\Zoid.cs" />
     <Compile Include="StellarObjects\Asteroid.cs" />
     <Compile Include="StellarObjects\LargeMassObject.cs" />
