--- a/Server/Server Application/Server Testing Application/Server Testing Application.csproj
+++ b/Server/Server Application/Server Testing Application/Server Testing Application.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B5C87F97-793C-436F-BE66-BDA78F9A7046}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{8C0031FB-0A8A-4BCB-8E3A-0A6FFC88D174}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Data_Structures</RootNamespace>
-    <AssemblyName>Data Structures</AssemblyName>
+    <RootNamespace>Server_Testing_Application</RootNamespace>
+    <AssemblyName>Server Testing Application</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -21,17 +22,15 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <UseVSHostingProcess>true</UseVSHostingProcess>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -43,19 +42,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data.cs" />
-    <Compile Include="ErrorMessage.cs" />
-    <Compile Include="GameData.cs" />
-    <Compile Include="GameFrame.cs" />
-    <Compile Include="GameMessage.cs" />
-    <Compile Include="Gameroom.cs" />
-    <Compile Include="GameSetupMessage.cs" />
-    <Compile Include="Player.cs" />
-    <Compile Include="PlayerRequest.cs" />
-    <Compile Include="Projectile.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RoomInfo.cs" />
-    <Compile Include="RoomList.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Data Manipulation\Data Manipulation.csproj">
+      <Project>{93ea3317-84d9-4b61-9c03-020646b3eb05}</Project>
+      <Name>Data Manipulation</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Data Structures\Data Structures.csproj">
+      <Project>{b5c87f97-793c-436f-be66-bda78f9a7046}</Project>
+      <Name>Data Structures</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
