--- a/Client/SpaceUnionXNA.csproj
+++ b/Client/SpaceUnionXNA.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Controllers\OptionsMenu.cs" />
     <Compile Include="Controllers\ShipSelectionScreen.cs" />
     <Compile Include="Controllers\TeamBattle.cs" />
+    <Compile Include="UIConstants.cs" />
     <Compile Include="Ships\Lobstar.cs" />
     <Compile Include="Tools\GUI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -120,6 +121,7 @@
     <Compile Include="StellarObjects\Asteroid.cs" />
     <Compile Include="StellarObjects\LargeMassObject.cs" />
     <Compile Include="StellarObjects\Planet.cs" />
+    <Compile Include="Tools\Resolution.cs" />
     <Compile Include="Tools\Tangible.cs" />
     <Compile Include="Gui\Table.cs" />
     <Compile Include="Tools\AnimationClass.cs" />
@@ -140,6 +142,7 @@
     <Compile Include="Tools\Ray2.cs" />
     <Compile Include="Tools\ShipButton.cs" />
     <Compile Include="Tools\Sprite.cs" />
+    <Compile Include="Tools\Taskbar.cs" />
     <Compile Include="Tools\TeamBattleGUI.cs" />
     <Compile Include="Weapons\Projectiles\HomingMissile.cs" />
     <Compile Include="Weapons\Projectiles\Laser.cs" />
